--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Angular-CLI starter for a Clarity project",
   "angular-cli": {},
   "scripts": {
-    "start": "ng serve --host 0.0.0.0 --public-host  wayne-spring-2018-phortonssf.c9users.io",
+    "start": "ng serve --host 0.0.0.0 --port 8081 --public-host  wayne-spring-2018-phortonssf.c9users.io",
     "lint": "tslint \"src/**/*.ts\"",
     "test": "ng test --single-run",
     "pree2e": "webdriver-manager update",
@@ -16,6 +16,7 @@
     "@angular/common": "~5.0.0",
     "@angular/compiler": "~5.0.0",
     "@angular/core": "~5.0.0",
+    "@angular/flex-layout": "^5.0.0-beta.13",
     "@angular/forms": "~5.0.0",
     "@angular/http": "~5.0.0",
     "@angular/platform-browser": "~5.0.0",
